--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-asgiref==3.8.1
-cloudinary==1.39.1
-Django==5.0.3
+asgiref==3.3.4
+cloudinary==1.25.0
+Django==3.2.4
 django-cloudinary-storage==0.3.0
+djangorestframework==3.12.4
 Pillow==8.2.0
-sqlparse==0.4.4
+pytz==2021.1
+sqlparse==0.4.1
