--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-asgiref==3.3.4
+asgiref==3.8.1
+betterpath==0.2.2
+click==8.1.7
 cloudinary==1.25.0
-Django==3.2.4
+dj-rest-auth==2.1.9
+Django==4.2.11
+django-allauth==0.44.0
 django-cloudinary-storage==0.3.0
 django-filter==24.2
-djangorestframework==3.12.4
+djangorestframework==3.15.1
+djangorestframework-simplejwt==4.7.2
+l==0.11.0
+oauthlib==3.2.2
 Pillow==8.2.0
+PyJWT==2.8.0
+python3-openid==3.2.0
 pytz==2021.1
+requests-oauthlib==2.0.0
 sqlparse==0.4.1
+vcversioner==2.16.0.0
+zope.interface==6.2
