--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ asgiref==3.8.1
 betterpath==0.2.2
 click==8.1.7
 cloudinary==1.25.0
+dj-database-url==0.5.0
 dj-rest-auth==2.1.9
-Django==4.2.11
+Django==3.2.4
 django-allauth==0.44.0
 django-cloudinary-storage==0.3.0
 django-filter==24.2
@@ -12,6 +13,7 @@ djangorestframework-simplejwt==4.7.2
 l==0.11.0
 oauthlib==3.2.2
 Pillow==8.2.0
+psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2021.1
