--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ gunicorn==20.1.0
 oauthlib==3.1.1
 Pillow==8.2.0
 PyJWT==2.1.0
+psycopg2-binary==2.9.9
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
