--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,9 @@ djangorestframework-simplejwt==4.7.2
 gunicorn==20.1.0
 oauthlib==3.1.1
 Pillow==8.2.0
+psycopg2==2.9.1
 PyJWT==2.1.0
-psycopg2-binary==2.9.9
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
-urllib3==1.26.15
